# SSTcore

./: .gitignore  .gitmodules  .npmignore  BUILD_NPM.md  CMakeLists.txt  CONTRIBUTING.md  EXAMPLES_RESTORE_LOG.md  EXAMPLES_RESTORE_MANIFEST.md  LICENSE  MANIFEST.in  NODE_BUILD.md  NODE_RECOVERY_REPORT.md  Readme.md  SST-59-UPGRADE.md  SSTcore_Dashboard.spec  SSTcore_full_probe.js  SSTcore_full_probe.py  binding.gyp  compile.bat  demo.js  dev_editable_install.py  freeze_from_requirements.py  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  sstbindings.py  sstcore.py  swirl_string_core.py  test_install.py  verify_sst_hardware.py
SST_Dashboard/: readme.md  sstcore_biot_bridge.py  trefoil_multisector_fitter.py  trefoil_multisector_fitterv2.py  trefoil_multisector_week_12.py
SSTcore/: __init__.py  cli.py  knot_registry.py  sst_integrator.cpp
build_node/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  knot_files_embedded.vcxproj  knot_files_embedded.vcxproj.filters  sstbindings.vcxproj  sstbindings.vcxproj.filters  swirl_string_core.sln  swirl_string_core.vcxproj  swirl_string_core.vcxproj.filters  swirl_string_core_lib.vcxproj  swirl_string_core_lib.vcxproj.filters  swirl_string_core_node.vcxproj  swirl_string_core_node.vcxproj.filters  test_frenet.vcxproj  test_frenet.vcxproj.filters
build_wasm/: CMakeCache.txt
cmake/: copy_pyd_fallback.cmake  embed_knot_files.cmake
docs/: ANGULAR_API.md  BINDING_COVERAGE.md  BUILDING_WHEELS.md  BUILD_NPM.md  BUILD_WHEELS_CONDA.md  COLAB_INSTALL.md  DASHBOARD_BRIDGE.md  DOWNLOAD_INSTALL.md  Equations.md  GEOMETRY_CERTIFICATE_PROTOCOL_v0.1.md  PUBLISHING.md  PYPI_CHECKLIST.md  QUICK_START_PUBLISHING.md  README_NPM.md  RELEASE_NOTES_0.1.2.md  RELEASE_NOTES_0.1.3.md  RELEASE_NOTES_0.8.12.md  RELEASE_NOTES_0.8.13.md  RELEASE_NOTES_0.8.18.md  RELEASE_NOTES_0.8.19.md  SETUP_GITHUB_ACTIONS.md  SETUP_NPM_PUBLISHING.md  UNIFIED_BUILD.md  UPLOAD_TO_PYPI.md  VERIFY_EMBEDDED_KNOTS.md  VERSION_MANAGEMENT.md  VORTEXLAB_KERNEL_IMPLEMENTATION_PLAN.md  VORTEXLAB_KERNEL_STATUS.md  VORTEXLAB_NODE_CAPABILITIES.md  api_refactor_p1.md  api_refactor_p2.md  knot_sources.md  test_embedded_knots.py
examples/: HelicityCalculation.py  README.md  _example_bootstrap.py  biot-savart_on_fseries.py  braid_generator.py  braid_search_engine.py  braid_search_log.txt  eval_ab_initio.py  example_ab_initio.py  example_ab_initio.ts  example_atomic_bridge_model.py  example_biot_savart.py  example_biot_savart.ts  example_canonical_constants.py  example_chronos_kelvin_transport.py  example_clock_field_eft.py  example_delay_mode_selector.py  example_enstrophy_circulation.py  example_fetching_knots.py  example_field_kernels.py  example_field_kernels.ts  example_field_ops.py  example_field_ops.ts  example_fluid_rotation.py  example_fluid_rotation.ts  example_fremlin_4_1_showcase.py  example_frenet_helicity.py  example_frenet_helicity.ts  example_golden_nls.py  example_heavy_knot.py  example_hyperbolic_volume.ts  example_ideal_knot_showcase.py  example_knot.ts  example_knot_catalogs.ts  example_knot_visualization.py  example_magnus_integrator.py  example_magnus_integrator.ts  example_multisector_fitter.py  example_particle_zoo_eval.py  example_potential_flow.ts  (+49 more)
include/: SST_Constants.h  SST_Master_Dictionary.h  ab_initio_mass.h  sstcore_version.h  vec3_utils.h
lib/: resource_helpers.d.ts  resource_helpers.js
node_examples/: ab_initio.example.ts  biot_savart.example.ts  field_kernels.example.ts  magnus_integrator.example.ts  sst_extensions.example.ts  sst_gravity.example.ts  thermo_dynamics.example.ts  time_evolution.example.ts  vortex_ring.example.ts  vorticity_dynamics.example.ts
resources/: README.md  binding_manifest.json  ideal_favorites.txt  knot_id_crosswalk.csv  knots_data_fourier.js  knots_data_ideal.js  knots_data_knotplot.js  load_knot_catalogs.d.ts  load_knot_catalogs.js
scripts/: audit_binding_examples.py  binding_inventory.py  build_node_target.js  build_wasm.js  check_npm_pack_size.js  check_package_casing.py  ensure_knot_embedded.js  gen_binding_manifest.py  install-native.js  make_source_zip.py  p2_spectral_cpp.py  p2_split_tube.py  patch_src_examples.py  prebuild.js  preflight_wheel_check.py  prepack-clean.js  run_node_examples.js  scaffold_src_examples.py  smoke_packaged_tarball.js  source_zip_common.py  split_knot_dynamics.py  unpack_source_resources.py
src/: ab_initio_mass.cpp  ab_initio_mass.h  ab_initio_mass_node.cpp  ab_initio_mass_py.cpp  atomic_bridge_model.cpp  atomic_bridge_model.h  atomic_bridge_model_node.cpp  atomic_bridge_model_py.cpp  biot_savart.h  biot_savart_node.cpp  canonical_constants.cpp  canonical_constants.h  canonical_constants_node.cpp  canonical_constants_py.cpp  chronos_kelvin_transport.cpp  chronos_kelvin_transport.h  chronos_kelvin_transport_node.cpp  chronos_kelvin_transport_py.cpp  clock_field_eft.cpp  clock_field_eft.h  clock_field_eft_node.cpp  clock_field_eft_py.cpp  constants.h  delay_mode_selector.cpp  delay_mode_selector.h  delay_mode_selector_node.cpp  delay_mode_selector_py.cpp  field_kernels.h  field_kernels_node.cpp  fluid_dynamics.cpp  fluid_dynamics.h  fluid_dynamics_node.cpp  fluid_dynamics_py.cpp  frenet_helicity.h  frenet_helicity_node.cpp  hyperbolic_volume_node.cpp  knot_dynamics.cpp  knot_dynamics.h  knot_dynamics_node.cpp  knot_dynamics_py.cpp  (+58 more)
src_bindings/: module_sst.cpp  py_ab_initio.cpp
sst_taxonomy_starter_v3b/: README.md
tests/: TestLibraryGravityModification.py  TestLibraryTrefoil.py  conftest.py  run_test.py  sstcore_test_import.py  swirl_string_core.cp312-win_amd64.pyd  test_audit_binding_examples.py  test_basic.js  test_binding_defaults_canon.py  test_binding_manifest.py  test_bindings_basic.py  test_biot_savart.py  test_biot_savart_comprehensive.py  test_canon_v0_8_12_alignment.py  test_delay_mode_selector.py  test_field_kernels_comprehensive.py  test_field_ops_comprehensive.py  test_fluid_dynamics_comprehensive.py  (+26 more)
(+406 files in other folders)
